--- a/CODE HELP/HTML/practise.html
+++ b/CODE HELP/HTML/practise.html
@@ -12,5 +12,22 @@
         <h2>
             world
         </h2>
+        <table border="1">
+            <tr>
+                <td>100</td>
+                <td>200</td>
+                <td>300</td>
+            </tr>
+            <tr>
+                <td>10</td>
+                <td>20</td>
+                <td>30</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
 </body>
 </html>
