--- a/CODE HELP/HTML/tag.html
+++ b/CODE HELP/HTML/tag.html
@@ -26,7 +26,7 @@
             <li>
                 Maggi
             </li>
-            <li> kutkure</li>
+            <li> kurkure</li>
             <li>
                 Lays
             </li>
@@ -56,7 +56,7 @@
             </tr>
         </table>
 
-        <img src="https://res.klook.com/images/fl_lossy.progressive,q_65/c_fill,w_1200,h_630/w_80,x_15,y_15,g_south_west,l_Klook_water_br_trans_yhcmh3/activities/tsah7c9evnal289z5fig/IMG%20Worlds%20of%20Adventure%20Admission%20Ticket%20in%20Dubai%20-%20Klook.jpg" alt="Parmish Verma">
+        <img src="https://res.klook.com/images/fl_lossy.progressive,q_65/c_fill,w_1200,h_630/w_80,x_15,y_15,g_south_west,l_Klook_water_br_trans_yhcmh3/activities/tsah7c9evnal289z5fig/IMG%20Worlds%20of%20Adventure%20Admission%20Ticket%20in%20Dubai%20-%20Klook.jpg", alt="Hare Krishna">
 
 
         <p>Lorem <b>ipsum</b>,<strong> dolor</strong><i> sit</i> <u>amet</u><s> consectetur</s> adipisicing elit. Velit, quod beatae debitis neque libero aperiam facere soluta harum quam repellendus blanditiis laudantium rem exercitationem obcaecati commodi vero provident cumque fuga sed fugiat cum inventore deserunt tenetur? Obcaecati libero porro quam quae aliquid rerum ad consequatur, dolore accusamus officiis quas maiores! Nobis adipisci, illum minus dicta pariatur culpa animi impedit similique voluptatum quam vitae laborum nesciunt! Explicabo vero quos dignissimos distinctio reiciendis repellat quisquam sunt ad praesentium delectus suscipit labore cumque iure autem magni quia quod in illum, accusantium asperiores obcaecati quibusdam ea. Reprehenderit ab officiis eos vel, dolorem accusantium cumque!
@@ -67,13 +67,24 @@
         <pre>
             hello delhi this is amulya
              tommorow is general election
+             lorem50
         </pre>
 
 
 
     </body>
-    <!-- Topics learn : 
+    <pre>Topics learn : 
      1] heading tab
-     2) anchor tab
-     3) -->
+     2) paragraph
+     3) anchor tab href - mail, phone, weblink
+     4) list - ordered and unordered
+     5) Table - td , tr, border
+     6) image using src link,alt
+     # - Attributes - id, style, href
+     7) lorem50 ...,
+     <!-- 8) <b>,<strong>,<em>,<i>,<u>,<s>,<sup>,<sub> -->
+     9) pre
+     10)article,main, section
+    </pre>
+
 </html>
