--- a/CODE HELP/HTML/tag.html
+++ b/CODE HELP/HTML/tag.html
@@ -67,13 +67,12 @@
         <pre>
             hello delhi this is amulya
              tommorow is general election
-             lorem50
         </pre>
 
 
 
     </body>
-    <pre>Topics learn : 
+    <!-- Topics learn : 
      1] heading tab
      2) paragraph
      3) anchor tab href - mail, phone, weblink
@@ -82,9 +81,8 @@
      6) image using src link,alt
      # - Attributes - id, style, href
      7) lorem50 ...,
-     <!-- 8) <b>,<strong>,<em>,<i>,<u>,<s>,<sup>,<sub> -->
+     8) <b>,<strong>,<em>,<i>,<u>,<s>,<sup>,<sub>
      9) pre
-     10)article,main, section
-    </pre>
+     10)article,main, section-->
 
 </html>
