--- a/CODE HELP/HTML/forms.html
+++ b/CODE HELP/HTML/forms.html
@@ -26,7 +26,7 @@
                 <label for="datepicker">Choose Date</label>
                 <input type="date" id - "datepicker"><br><br>
                 <label for="selector 1">Dishes : </label>
-                <select name="dishes" id = "selector1">
+                <select multiple size="1" name="dishes" id = "selector1">
                     <option value="Maggie">Maggie</option>
                     <option value="Kurkure">Kurkure</option>
                     <option value="Chips">Chips</option>
@@ -50,9 +50,9 @@
             <label for="radio1">RadioButton : </label>
             <input type="radio" name = "radio1" id = "radio1">
             <label for="radio2">RadioButton2 : </label>
-            <input type="radio" name = "radio2" id = "radio2">
+            <input type="radio" name = "radio1" id = "radio2">
             <label for="radio3">RadioButton3 : </label>
-            <input type="radio" name = "radio3" id = "radio3">
+            <input type="radio" name = "radio1" id = "radio3">
             <br><br>
 
             <label for="checkbox">Checkbox : </label>
@@ -75,6 +75,7 @@
     </div>
 
 
+
 </body>
 </html>
 
@@ -87,7 +88,7 @@
  6) name , value attribute
  7) PlaceHolder
  8) form elements : Select - dropdown,option, button, TextArea, fieldset , legend
- 9) Multiple options select enable
+ 9) Multiple options select enable - select multiple
  10) Input type : textfield, button, radio, checkbox, file select, image,password field,date,etc
- 11) Only one radio button select
+ 11) Only one radio button select - giving same name attribute
   -->
