--- a/CODE HELP/HTML/media/media.html
+++ b/CODE HELP/HTML/media/media.html
@@ -6,15 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="" alt="" width="" height="" loading="">
+    <img src="D:\Users\SHIVAM GUPTA\Desktop\programming\Downloads\lecture11\logo.png" alt="Image" width="" height="" >
 
-    <audio src="" controls></audio>
+    <audio src="D:\Users\SHIVAM GUPTA\Desktop\programming\Downloads\lecture11\audioFile.mp3" controls></audio>
 
     <audio controls>
-        <source src="" type="">
+        <source src="D:\Users\SHIVAM GUPTA\Desktop\programming\Downloads\lecture11\audioFile.mp3" type="video/mp3">
     </audio>
 
-    <video src="" controls height="" width=""></video>
+    <video src="D:\Users\SHIVAM GUPTA\Desktop\programming\Downloads\lecture11\videoFile.mp4" controls height="100" width="100"></video>
 
     <iframe src="" frameborder="0" width="" height=""></iframe>
     <!-- youtube video -->
