--- a/CODE HELP/HTML/media/media.html
+++ b/CODE HELP/HTML/media/media.html
@@ -6,19 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="D:\Users\SHIVAM GUPTA\Desktop\programming\Downloads\lecture11\logo.png" alt="Image" width="" height="" >
-
-    <audio src="D:\Users\SHIVAM GUPTA\Desktop\programming\Downloads\lecture11\audioFile.mp3" controls></audio>
+    <img src="logo.png" alt="Image" width="200" height="200" >
+    
+    <audio src="audioFile.mp3" controls></audio>
 
     <audio controls>
-        <source src="D:\Users\SHIVAM GUPTA\Desktop\programming\Downloads\lecture11\audioFile.mp3" type="video/mp3">
+        <source src="audioFile.mp3" type="audio/mp3">
     </audio>
 
-    <video src="D:\Users\SHIVAM GUPTA\Desktop\programming\Downloads\lecture11\videoFile.mp4" controls height="100" width="100"></video>
+    <video src="videoFile.mp4" controls height="300" width="200"></video>
 
-    <iframe src="" frameborder="0" width="" height=""></iframe>
+    <iframe src="../tag.html" frameborder="0" width="" height=""></iframe>
     <!-- youtube video -->
-    <iframe src="" frameborder="0"></iframe>
+    <iframe src="https://www.youtube.com/embed/fb4rgYbi84c" frameborder="0"></iframe>
 
 </body>
 </html>
