Youtube Video Collection

--- a/Projects/project3_youtube_collection/index.html
+++ b/Projects/project3_youtube_collection/index.html
@@ -12,7 +12,7 @@
         <table>
             <tr>
                 <td>
-                    <img src="logo.png" alt="logo image">
+                    <img src="logo.png" title= "CODEHELP"="logo image">
                 </td>
                 <td>
                     <nav>
