Youtube Video Collection

--- a/Projects/project3_youtube_collection/index.html
+++ b/Projects/project3_youtube_collection/index.html
@@ -167,7 +167,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <iframe src="https://www.youtube.com/embed/fb4rgYbi84c" width="450" height="250"></iframe>
+                        <iframe src="https://www.youtube.com/embed/fb4rgYbi84c" loading = "lazy" width="450" height="250"></iframe>
                     </td>
                     <td>
                         <iframe src="https://www.youtube.com/embed/fb4rgYbi84c" width="450" height="250"></iframe>
