SEO and meta tags

--- a/CODE HELP/HTML/seo and head tag/index.html
+++ b/CODE HELP/HTML/seo and head tag/index.html
@@ -2,10 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Favicon, Meta Tag, title</title>
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+
+    <meta name="description" content="This is the sneding Good morning website.">
+    <meta name="keywords" content="Good, Morning, Good Morning">
+
+
 </head>
 <body>
-    <p>Hi</p>
+    <h1>HI</h1>
+    <button>Send Good morning</button>
 </body>
 </html>
+
+<!-- Todays Learning : 
+ 1) head tag
+ 2) title
+ 3) favicon using link
+ 4) add css stylesheet, js
+ 5) seo - search engine optimization - to appear at top
+ 6) meta tag is used to improve seo
+ 7) Attributes : charset - character encoding, http-equiv - for uniformity across various developers(latest render agent)
+ , name - used to describe type of metadata, viewport - target view , content - to fit the size accordingly and to set initial scale (zoom %)
+ 8) description - Summary/details before opening website(link on google) + content - details to add
+ 9) keywords - searching keywords to easy find
+ -->
+ 
