--- a/UPSKILL MAFIA/Html/Current/practise1.html
+++ b/UPSKILL MAFIA/Html/Current/practise1.html
@@ -18,7 +18,7 @@
     <p>Lorem <strong>ipsum</strong> <em>dolor</em> sit, amet consectetur adipisicing elit. Quam ipsam optio repellat nihil exercitationem qui, ea hic harum magnam aliquid quo provident beatae placeat reprehenderit facere omnis quisquam, vel <small>consequatur</small> totam sint, aliquam laudantium debitis. Quis sint veritatis incidunt quas velit quibusdam veniam ea, architecto aspernatur quos deleniti dolorem molestias?</p>
 
     <!-- Link -->
-     <a href="https://www.youtube.com/watch?v=AXoanErUNE8" target = "_blank">Link1</a>
+     <a href="https://www.youtube.com/watch?v=AXoanErUNE8" target = "_top">Link1</a>
     
      <!-- break -->
      <br>
