Introduction to CSS

--- a/CODE HELP/CSS/index.html
+++ b/CODE HELP/CSS/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <h1>Welcome to CSS styling</h1>
-    <p style="background-color: yellow;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nesciunt nostrum consectetur cumque placeat deleniti, fugiat quod dolores aliquid corporis.</p>
+    <!-- <p style="background-color: yellow;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nesciunt nostrum consectetur cumque placeat deleniti, fugiat quod dolores aliquid corporis.</p> -->
     <p style="color: aqua;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, possimus harum esse consequuntur praesentium nisi blanditiis accusantium voluptatem, ex alias saepe quisquam tempora at pariatur ipsa optio. Ab, cupiditate delectus.</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto, ipsum dicta. Placeat doloribus ratione consequatur alias asperiores quos excepturi sequi totam molestias, facere culpa itaque ipsum earum aperiam reiciendis voluptatem eum magnam ut dolore delectus praesentium. Aliquam maxime dolor corporis, tenetur dolores mollitia adipisci alias doloribus quae asperiores laudantium fugit.</p>
     <footer>I am Footer</footer>
