--- a/CODE HELP/CSS/lecture16_display_property/index.html
+++ b/CODE HELP/CSS/lecture16_display_property/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
+    <!-- <div>
         Welcome to display properties
     </div>
 
@@ -20,6 +20,14 @@
     </span>
     <span>
         This is span tag.
+    </span> --> 
+
+    <span>
+        This is Display :  Inline-block property
+    </span>
+
+    <span>
+        This is second span tag.
     </span>
     
 </body>
