--- a/CODE HELP/CSS/lecture17_postion_property/index.html
+++ b/CODE HELP/CSS/lecture17_postion_property/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <img src="" alt="">
+    </div>
 </body>
 </html>
