CSS Position Property

--- a/CODE HELP/CSS/lecture17_postion_property/index.html
+++ b/CODE HELP/CSS/lecture17_postion_property/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="" alt="">
+        <img src="sup1.JPG" alt="poster 1" width="300px" height="300px" class="image1">
+        <img src="sup2.JPG" alt="poster 2" width="300px" height="300px" class="image2">
+        <img src="sup3.JPG" alt="poster 3" width="300px" height="300px" class="image3">
+        <img src="sup4.JPG" alt="poster 4" width="300px" height="300px" class="image4">
     </div>
 </body>
 </html>
