--- a/CODE HELP/CSS/lecture18_size_units/index.html
+++ b/CODE HELP/CSS/lecture18_size_units/index.html
@@ -7,8 +7,26 @@
     <title>Size Units</title>
 </head>
 <body>
-    <div class="box">
+    <!-- <div class="box">
         Introduction of Size Units
     </div>
-</body>
+    <div class="parent">
+        <div class="child">
+            CHILD
+        </div>
+    </div> -->
+
+    <!-- <div class="container">
+        Welcome to CSS Programming
+    </div> -->
+
+    <!-- <div class="box1">
+        Pixel
+    </div> -->
+    <div class="container">
+        <div class="box">
+            Hello World
+        </div>
+    </div>
+    
 </html>
