--- a/CODE HELP/CSS/lecture20_flexbox/index.html
+++ b/CODE HELP/CSS/lecture20_flexbox/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <div class="box" id="box1"></div>
-        <div class="box" id="box2"></div>
-        <div class="box" id="box3"></div>
-        <div class="box" id="box4"></div>
+        <div class="box" id="box1">BOX1</div>
+        <div class="box" id="box2">BOX2</div>
+        <div class="box" id="box3">BOX3</div>
+        <div class="box" id="box4">BOX4</div>
     </div>
 </body>
 </html>
