--- a/UPSKILL MAFIA/CSS/Current/mini_projects/Glassmorphic_signup_page/index.html
+++ b/UPSKILL MAFIA/CSS/Current/mini_projects/Glassmorphic_signup_page/index.html
@@ -10,26 +10,34 @@
     <div class="outer_box">
         <div class="inner_box">
             <header class="signup-header">
-                <h1>SignUp</h1>
+                <h1>Signup</h1>
                 <p>It just takes 30 seconds</p>
             </header>
             <main class="signup-body">
                 <form action="">
                     <p>
-                        <label for="fullname">FULL NAME</label>
-                        <input type="text" id="fullname" placeholder="Amulya Gupta" required><br>
-                        <label for="Email">EMAIL</label>
-                        <input type="email" id="Email" placeholder="amulyagupta57121@gmail.com" required><br>
-                        <label for="Password">PASSWORD</label>
-                        <input type="password" id="Passwrod" placeholder="ATLEAST 8 CHARACTERS" required><br>
+                        <label for="fullname">Full Name</label>
+                        <input type="text" id="fullname" placeholder="Amulya Gupta" required>
+                    </p>
+                    <p>
+                        <label for="Email">Email</label>
+                        <input type="email" id="Email" placeholder="amulyagupta57121@gmail.com" required>
+                    </p>
+                    <p>
+                        <label for="Password">Password</label>
+                        <input type="password" id="Passwrod" placeholder="ATLEAST 8 CHARACTERS" required>
+                    </p>
+                    <p>
                         <input type="submit" id="submit" value="Create Account">
                     </p>
                 </form>
             </main>
-            <footer class="signup-footup">
+            <footer class="signup-footer">
                 <p>Already have an Account? <a href="#">Login</a></p>
             </footer>
         </div>
+        <div class="circle c1"></div>
+        <div class="circle c2"></div>
     </div>
 </body>
 </html>
