--- a/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/index.html
+++ b/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/index.html
@@ -7,6 +7,8 @@
     <title>My Website</title>
 </head>
 <body>
+
     
+    <script src="https://kit.fontawesome.com/3baf8c72ac.js" crossorigin="anonymous"></script>
 </body>
 </html>
