--- a/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/index.html
+++ b/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/index.html
@@ -8,7 +8,24 @@
 </head>
 <body>
 
+    <div class="top-banner"></div>
+
+    <nav></nav>
+
+    <header></header>
+
+    <section class="companies-section"></section>
+
+    <section class="feature-section"></section>
+
+    <section class="big-feature-section"></section>
+
     
+
+
+
+
+
     <script src="https://kit.fontawesome.com/3baf8c72ac.js" crossorigin="anonymous"></script>
 </body>
 </html>
