--- a/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/index.html
+++ b/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/index.html
@@ -19,6 +19,15 @@
     <section class="feature-section"></section>
 
     <section class="big-feature-section"></section>
+    <section class="big-feature-section"></section>
+    <section class="big-feature-section"></section>
+
+    <section class="examples-section"></section>
+
+    <section class="cta-section"></section>
+
+    <footer></footer>
+    <div class="subfooter"></div>
 
     
 
