--- a/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/index.html
+++ b/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
 
-    <div class="top-banner"></div>
+    <div class="top-banner">
+        <div class="small-bold-text">
+            🥳 New to Usability Hub: Open and Closed card sorting
+        </div>
+    </div>
 
     <nav></nav>
 
@@ -30,9 +34,6 @@
     <div class="subfooter"></div>
 
     
-
-
-
 
 
     <script src="https://kit.fontawesome.com/3baf8c72ac.js" crossorigin="anonymous"></script>
