--- a/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/index.html
+++ b/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/index.html
@@ -9,8 +9,10 @@
 <body>
 
     <div class="top-banner">
-        <div class="small-bold-text">
-            🥳 New to Usability Hub: Open and Closed card sorting
+        <div class="container">
+            <div class="small-bold-text banner-text">
+                🥳 New to Usability Hub: Open and Closed card sorting
+            </div>
         </div>
     </div>
 
