--- a/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/index.html
+++ b/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/index.html
@@ -48,13 +48,112 @@
         </div>
     </header>
 
-    <section class="companies-section"></section>
+    <!-- companies section -->
 
-    <section class="feature-section"></section>
+    <section class="companies-section">
+        <div class="container">
+            <div class="small-bold-text companies-header">The world’s best companies rely on UsabilityHub to make better design decisions.</div>
+            <div class="logos flex">
+                <img class="logo" src="./assets/asset 3.png" alt="">
+                <img class="logo" src="./assets/asset 4.png" alt="">
+                <img class="logo" src="./assets/asset 5.png" alt="">
+                <img class="logo" src="./assets/asset 6.png" alt="">
+                <img class="logo" src="./assets/asset 7.png" alt="">
+                <img class="logo" src="./assets/asset 8.svg" alt="">
+                <img class="logo" src="./assets/asset 9.png" alt="">
+            </div>
+        </div>
+    </section>
 
-    <section class="big-feature-section"></section>
-    <section class="big-feature-section"></section>
-    <section class="big-feature-section"></section>
+    <!-- features section -->
+
+    <section class="features-section">
+        <div class="container">
+            <div class="features-header">
+                <h2 class="features-heading-text">Your user research Swiss Army knife</h2>
+                <a href="#" class="secondary-button">See all features <i class="fa-solid fa-right-long"></i></a>
+            </div>
+            <div class="features-area flex">
+                <div class="features-card flex">
+                    <img src="./assets/asset 11.svg" alt="">
+                    <h3>Card Sorting</h3>
+                    <p>Discover how people group and label information.</p>
+                    <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
+                </div>
+                <div class="features-card flex">
+                    <img src="./assets/asset 13.svg" alt="">
+                    <h3>Prototype tests</h3>
+                    <p>Discover how people navigate your Figma prototypes.</p>
+                    <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
+                </div>
+                <div class="features-card flex">
+                    <img src="./assets/asset 14.svg" alt="">
+                    <h3>First click tests</h3>
+                    <p>Test interaction with first click and navigation tests.</p>
+                    <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
+                </div>
+                <div class="features-card flex">
+                    <img src="./assets/asset 15.svg" alt="">
+                    <h3>Design surveys</h3>
+                    <p>Get feedback on images, videos or audio files.</p>
+                    <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
+                </div>
+                <div class="features-card flex">
+                    <img src="./assets/asset 16.svg" alt="">
+                    <h3>Preference tests</h3>
+                    <p>Find out which designs users prefer and why.</p>
+                    <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
+                </div>
+                <div class="features-card flex">
+                    <img src="./assets/asset 17.svg" alt="">
+                    <h3>Five second tests</h3>
+                    <p>Test comprehensibility by measuring first impressions.</p>
+                    <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+        <!-- big features section -->
+
+    <section class="big-feature-section">
+        <div class="container flex big-feature-container">
+            <div class="feature-img">
+                <img src="./assets/asset 18.png" alt="">
+            </div>
+            <div class="feature-desc flex">
+                <h4>Effortless validation for</h4>
+                <h3>Design professionals</h3>
+                <p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful experiences for your users.</p>
+            </div>
+        </div>
+    </section>
+    
+    <section class="big-feature-section">
+        <div class="container flex big-feature-container" id="second-big-feature">
+            <div class="feature-desc flex">
+                <h4>Effortless validation for</h4>
+                <h3>Design professionals</h3>
+                <p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful experiences for your users.</p>
+            </div>
+            <div class="feature-img">
+                <img src="./assets/asset 21.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section class="big-feature-section">
+        <div class="container flex big-feature-container">
+            <div class="feature-img">
+                <img src="./assets/asset 24.png" alt="">
+            </div>
+            <div class="feature-desc flex">
+                <h4>Effortless validation for</h4>
+                <h3>Design professionals</h3>
+                <p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful experiences for your users.</p>
+            </div>
+        </div>
+    </section>
 
     <section class="examples-section"></section>
 
@@ -62,6 +161,8 @@
 
     <footer></footer>
     <div class="subfooter"></div>
+
+    <div class="spacer" style="height: 100vh;"></div>
 
     
 
