--- a/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/index.html
+++ b/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/index.html
@@ -190,7 +190,39 @@
         </div>
     </section>
 
-    <footer></footer>
+    <!-- footer -->
+
+    <footer>
+        <div class="container flex footer-container">
+            <a href="#" class="company-logo">
+                <img src="./assets/asset 1.png" alt="company logo">
+            </a>
+            <div class="link-column flex">
+                <h4>Product</h4>
+                <a href="#" class="hover-link">Overview</a>
+                <a href="#" class="hover-link">Pricing</a>
+                <a href="#" class="hover-link">Usability Hub</a>
+                <a href="#" class="hover-link">Customers Page</a>
+                <a href="#" class="hover-link">Status Page</a>
+            </div>
+            <div class="link-column flex">
+                <h4>Methodology</h4>
+                <a href="#" class="hover-link">Overview</a>
+                <a href="#" class="hover-link">Pricing</a>
+                <a href="#" class="hover-link">Usability Hub</a>
+                <a href="#" class="hover-link">Customers Page</a>
+                <a href="#" class="hover-link">Status Page</a>
+            </div>
+            <div class="link-column flex">
+                <h4>Resources</h4>
+                <a href="#" class="hover-link">Overview</a>
+                <a href="#" class="hover-link">Pricing</a>
+                <a href="#" class="hover-link">Usability Hub</a>
+                <a href="#" class="hover-link">Customers Page</a>
+                <a href="#" class="hover-link">Status Page</a>
+            </div>
+        </div>
+    </footer>
     <div class="subfooter"></div>
 
     <div class="spacer" style="height: 100vh;"></div>
