--- a/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/index.html
+++ b/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/index.html
@@ -223,12 +223,18 @@
             </div>
         </div>
     </footer>
-    <div class="subfooter"></div>
 
-    <div class="spacer" style="height: 100vh;"></div>
+    <!-- subfooter -->
 
-    
-
+    <div class="subfooter">
+        <div class="container flex subfooter-container">
+            <a class="hover-link" href="#">Privacy policy</a>
+            <a class="hover-link" href="#">Terms & Condition</a>
+            <a class="hover-link" href="#">Security Information</a>
+            <a class="hover-link" href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a class="hover-link" href="#"><i class="fa-brands fa-twitter"></i></a>
+        </div>
+    </div>
 
     <script src="https://kit.fontawesome.com/3baf8c72ac.js" crossorigin="anonymous"></script>
 </body>
