Media Queries and Custom Variables

--- a/CODE HELP/CSS/lecture21_media_queries/index.html
+++ b/CODE HELP/CSS/lecture21_media_queries/index.html
@@ -7,6 +7,8 @@
     <title>CSS Media Queries and Custom Variables</title>
 </head>
 <body>
-    
+    <div class="box">
+        Hello HI!
+    </div>
 </body>
 </html>
