Media Queries and Custom Variables

--- a/CODE HELP/CSS/lecture21_media_queries/index.html
+++ b/CODE HELP/CSS/lecture21_media_queries/index.html
@@ -7,8 +7,16 @@
     <title>CSS Media Queries and Custom Variables</title>
 </head>
 <body>
-    <div class="box">
+    <!-- <div class="box">
         Hello HI!
-    </div>
+    </div> -->
+
+     <!-- <div class="container">
+        <div class="box" id="box1">BOX1</div>
+        <div class="box" id="box2">BOX2</div>
+        <div class="box" id="box3">BOX3</div>
+        <div class="box" id="box4">BOX4</div>
+    </div> -->
+
 </body>
 </html>
