--- a/CODE HELP/CSS/lecture21_media_queries/index.html
+++ b/CODE HELP/CSS/lecture21_media_queries/index.html
@@ -18,5 +18,15 @@
         <div class="box" id="box4">BOX4</div>
     </div> -->
 
+    <div class="container">
+        <div id="boxleft">
+            <p>Text1</p>
+            <p>Text2</p>
+        </div>
+        <div id="boxright">
+            <img src="./bSinghji.jpeg" alt="Bhagat Singh">
+        </div>
+    </div>
+
 </body>
 </html>
