--- a/CODE HELP/CSS/lecture21_media_queries/index.html
+++ b/CODE HELP/CSS/lecture21_media_queries/index.html
@@ -18,13 +18,21 @@
         <div class="box" id="box4">BOX4</div>
     </div> -->
 
-    <div class="container">
+    <!-- <div class="container">
         <div id="boxleft">
             <p>Text1</p>
             <p>Text2</p>
         </div>
         <div id="boxright">
             <img src="./bSinghji.jpeg" alt="Bhagat Singh">
+        </div>
+    </div> -->
+
+    <div class="container">
+        <h1>Inside Container</h1>
+        <div class="box">
+            <h2>Inside Box</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi provident, eius illo blanditiis fugiat voluptatum, vitae quibusdam minus cum inventore, nostrum assumenda laborum et explicabo repellat alias illum necessitatibus minima.</p>
         </div>
     </div>
 
