--- a/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/index.html
+++ b/UPSKILL MAFIA/CSS/Current/mini_projects/home_page/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media-queries.css">
     <title>My Website</title>
 </head>
 <body>
@@ -21,7 +22,7 @@
             <a href="#" class="company-logo">
                 <img src="./assets/asset 1.png" alt="company-logo">
             </a>
-            <div class="nav-links">
+            <div class="nav-links" id="nav-links">
                 <ul class="flex">
                     <li><a href="#" class="hover-link">Products</a></li>
                     <li><a href="#" class="hover-link">Customer</a></li>
@@ -30,8 +31,10 @@
                     <li><a href="#" class="hover-link secondary-button">Sign In</a></li>
                     <li><a href="#" class="hover-link primary-button">Sign Up</a></li>
                 </ul>
-
             </div>
+            <a href="#" class="nav-toggle hover-link" id="nav-toggle">
+                <i class="fa-solid fa-bars"></i>
+            </a>
         </div>
     </nav>
 
@@ -131,13 +134,13 @@
     
     <section class="big-feature-section">
         <div class="container flex big-feature-container" id="second-big-feature">
+            <div class="feature-img">
+                <img src="./assets/asset 21.png" alt="">
+            </div>
             <div class="feature-desc flex">
                 <h4>Effortless validation for</h4>
                 <h3>Design professionals</h3>
                 <p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful experiences for your users.</p>
-            </div>
-            <div class="feature-img">
-                <img src="./assets/asset 21.png" alt="">
             </div>
         </div>
     </section>
@@ -235,6 +238,14 @@
             <a class="hover-link" href="#"><i class="fa-brands fa-twitter"></i></a>
         </div>
     </div>
+
+    <script>
+        const toggleButton = document.getElementById('nav-toggle');
+        const navLinks = document.getElementById('nav-links');
+        toggleButton.addEventListener('click',() => {
+            navLinks.classList.toggle('active');
+        })
+    </script>
 
     <script src="https://kit.fontawesome.com/3baf8c72ac.js" crossorigin="anonymous"></script>
 </body>
