--- a/UPSKILL MAFIA/CSS/Current/task6/index.html
+++ b/UPSKILL MAFIA/CSS/Current/task6/index.html
@@ -9,23 +9,29 @@
 <body>
     <nav>
         <ul>
-            <li id = "logo"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRpqq9O_Pwz8ijYWPCWFiZqwOKL64T1GSettRU3lpeNPg&s" alt="Logo"></li>
-            <li>Home  </li>
-            <li>Services</li>
-            <li>About Us</li>
-            <li>Contact Us</li>
-            <li class = "Username">Username</li>
+            <div class="logo">
+                 <li><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRpqq9O_Pwz8ijYWPCWFiZqwOKL64T1GSettRU3lpeNPg&s" alt="Logo" id="logo"></li>
+            </div>
+            <div class="nav-inside">
+                <li>Home</li>
+                <li>Services</li>
+                <li>About Us</li>
+                <li>Contact Us</li>
+            </div>
+            <div class = "Username">
+                <li>Username</li>
+            </div>
         </ul>
     </nav>
     
     <main class="hero">
-        <div class="right">        
-            <img class="img2" src="https://cdn1.vectorstock.com/i/1000x1000/52/10/wash-machine-laundry-service-vector-20895210.jpg" alt="laundry photo">
-        </div>
         <div class="left">
             <p class ="fp">Revitalize Your Clothes with Expert <span style="color: blue">Laundry Services!</span></p>
             <p class="sp" style="color: rgb(167, 172, 172);">From premium dry cleaning to swift wash and fold, we deliver care and convenience. Schedule a pickup and rediscover the freshness of your clothes today!</p>
             <p class="bp"><button type="button" class="button">Book a service today!</button></p>
+        </div>
+        <div class="right">        
+            <img class="img2" src="https://cdn1.vectorstock.com/i/1000x1000/52/10/wash-machine-laundry-service-vector-20895210.jpg" alt="laundry photo">
         </div>
     </main>
 </body>
