--- a/CODE HELP/CSS/lecture22_shadow_effects/index.html
+++ b/CODE HELP/CSS/lecture22_shadow_effects/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="box">
+            <img src="logo.png">
+            <h2 id="head1">Welcome to Box Shadow</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati impedit itaque dignissimos quam recusandae unde ratione excepturi 
+            adipisci fugit fuga aliquam nam totam voluptatum culpa, fugiat atque repudiandae incidunt enim maiores aspernatur voluptatem.</p>
+        </div>
+    </div>
 </body>
 </html>
