--- a/UPSKILL MAFIA/CSS/Current/task7/index.html
+++ b/UPSKILL MAFIA/CSS/Current/task7/index.html
@@ -20,7 +20,16 @@
                 <li>Contact Us</li>
             </div>
             <div class = "Username">
-                <li>Username</li>
+                <div class="un"><li>Username</li></div>
+                <div class="menu">
+                    <button class="menu-button"><i class="fa-solid fa-bars"></i></button>
+                    <div class="menu-items">
+                        <li>Home</li>
+                        <li>Services</li>
+                        <li>About Us</li>
+                        <li>Contact Us</li>
+                    </div>
+                </div>
             </div>
         </ul>
     </nav>
@@ -35,5 +44,7 @@
             <img class="img2" src="https://cdn1.vectorstock.com/i/1000x1000/52/10/wash-machine-laundry-service-vector-20895210.jpg" alt="laundry photo">
         </div>
     </main>
+
+    <script src="https://kit.fontawesome.com/3baf8c72ac.js" crossorigin="anonymous"></script>
 </body>
 </html>
