--- a/CODE HELP/CSS/lecture27_cards_website/index.html
+++ b/CODE HELP/CSS/lecture27_cards_website/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Card Website</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="card">
+            <img src="images/qrcode.png" alt="">
+            <h2>Improve your front end skills by developing projects</h2>
+            <p>Scan the QR Code to visit the Front End Project list and take your coding skills to next level</p>
+        </div>
+    </div>
 </body>
 </html>
