--- a/CODE HELP/CSS/lecture27_cards_website/index2.html
+++ b/CODE HELP/CSS/lecture27_cards_website/index2.html
@@ -9,7 +9,38 @@
 <body>
     <div class="container">
         <div class="card">
-            
+            <img src="images/icon.jpg" alt="">
+            <div class="textbox">
+                <h2>
+                    Order Summary
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur itaque placeat iure maiores! Cupiditate adipisci eius iste fugit?
+                </p>
+            </div>
+
+            <div class="amount">
+                <div class="left">
+                    <div class="imagebox">
+                        <img src="images/music.png" alt="">
+                    </div>
+                    <div class="textamount">
+                        <p>Amount</p>
+                        <p>$99.99/year</p>
+                    </div>
+                </div>
+                <div class="right">
+                    <a href="#">Change</a>
+                </div>
+            </div>
+
+            <button id="payment">
+                Proceed
+            </button>
+
+            <div class="cancel">
+                <a href="#">Cancel Order</a>
+            </div>
         </div>
     </div>
 </body>
