--- a/CODE HELP/CSS/lecture28_Grid/index.html
+++ b/CODE HELP/CSS/lecture28_Grid/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid View</title>
+    <link rel="stylesheet" href="style.css">
+    <title>CSS Grid</title>
 </head>
 <body>
     
