--- a/CODE HELP/CSS/lecture28_Grid/index.html
+++ b/CODE HELP/CSS/lecture28_Grid/index.html
@@ -7,6 +7,14 @@
     <title>CSS Grid</title>
 </head>
 <body>
+    <div class="container">
+        <div class="item header">Header</div>
+        <div class="item sidebar">SideBar</div>
+        <div class="item content1">Content 1</div>
+        <div class="item content2">Content 2</div>
+        <div class="item content3">Content 3</div>
+        <div class="item Footer">Footer</div>
+    </div>
     
 </body>
 </html>
