Blog Website part 2

--- a/CODE HELP/CSS/lecture29and30_blog_website/index.html
+++ b/CODE HELP/CSS/lecture29and30_blog_website/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Codehelp Blogs</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Blogs Website</title>
 </head>
 <body class="body_container">
 
     <div class="container">
 
         <header class="header_container">
-            <h1 class="header_title"> Codehelp Blogs</h1>
+            <h1 class="header_title"> CodeHelp Blogs</h1>
             <p class="header_desc">
                 Utilize this space to incorporate a captivating subheading crafted by ChatGPT, adding depth and intrigue to your blog.
             </p>
@@ -24,7 +23,7 @@
             <div class="card_container">
                 <a href="#" class="card_image_container">
                     <img
-                        src="https://source.unsplash.com/random/600×400?healthy"
+                        src="https://picsum.photos/600/400"
                         alt="card 1 image"
                         class="card_image"
                         loading="lazy"
@@ -32,7 +31,7 @@
                 </a>
 
                 <div class="card_title_container">
-                    <a href="#">
+                    <a href="#" class="card_title_anchor">
                         <h2 class="card_title">New Gadgets Released</h2>
                     </a>
                     <p class="card_desc">
@@ -47,28 +46,348 @@
                             <img 
                                 src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
                                 loading="lazy"
-                                class="aithor_avatar"
+                                class="author_avatar"
                                 alt="avatar 1"
                             />
                         </div>
                         <div class="author_info_container">
-                            <span>
+                            <span class="author_name">
                                 John Doe
                             </span>
-                            <span>
+                            <span class="author_date">
                                 Sept 19, 2021
                             </span>
                         </div>
                     </div>
 
-                    <div class="card_tag_container">
-                        <span>Technology</span>
+                    <div >
+                        <span class="card_tag_container">Technology</span>
+                    </div>
+                </div>
+            </div>
+            <!-- card 1 ends here -->
+
+            <div class="card_container">
+                <a href="#" class="card_image_container">
+                    <img
+                        src="https://picsum.photos/600/400?nutrition"
+                        alt="card 1 image"
+                        class="card_image"
+                        loading="lazy"
+                    />
+                </a>
+
+                <div class="card_title_container">
+                    <a href="#" class="card_title_anchor">
+                        <h2 class="card_title">New Gadgets Released</h2>
+                    </a>
+                    <p class="card_desc">
+                        Check out the latest tech gadgets hitting the market, from smartphones to smartwatches.
+                    </p>
+                </div>
+
+                <div class="card_footer_container">
+
+                    <div class="author_container">
+                        <div class="author_avatar_container">
+                            <img 
+                                src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
+                                loading="lazy"
+                                class="author_avatar"
+                                alt="avatar 1"
+                            />
+                        </div>
+                        <div class="author_info_container">
+                            <span class="author_name">
+                                John Doe
+                            </span>
+                            <span class="author_date">
+                                Sept 19, 2021
+                            </span>
+                        </div>
+                    </div>
+
+                    <div >
+                        <span class="card_tag_container">Technology</span>
                     </div>
                 </div>
             </div>
 
-            <!-- card 1 ends here -->
+            <div class="card_container">
+                <a href="#" class="card_image_container">
+                    <img
+                        src="https://picsum.photos/600/400?travel"
+                        alt="card 1 image"
+                        class="card_image"
+                        loading="lazy"
+                    />
+                </a>
 
+                <div class="card_title_container">
+                    <a href="#" class="card_title_anchor">
+                        <h2 class="card_title">New Gadgets Released</h2>
+                    </a>
+                    <p class="card_desc">
+                        Check out the latest tech gadgets hitting the market, from smartphones to smartwatches.
+                    </p>
+                </div>
+
+                <div class="card_footer_container">
+
+                    <div class="author_container">
+                        <div class="author_avatar_container">
+                            <img 
+                                src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
+                                loading="lazy"
+                                class="author_avatar"
+                                alt="avatar 1"
+                            />
+                        </div>
+                        <div class="author_info_container">
+                            <span class="author_name">
+                                John Doe
+                            </span>
+                            <span class="author_date">
+                                Sept 19, 2021
+                            </span>
+                        </div>
+                    </div>
+
+                    <div >
+                        <span class="card_tag_container">Technology</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card_container">
+                <a href="#" class="card_image_container">
+                    <img
+                        src="https://picsum.photos/600/400?technology"
+                        alt="card 1 image"
+                        class="card_image"
+                        loading="lazy"
+                    />
+                </a>
+
+                <div class="card_title_container">
+                    <a href="#" class="card_title_anchor">
+                        <h2 class="card_title">New Gadgets Released</h2>
+                    </a>
+                    <p class="card_desc">
+                        Check out the latest tech gadgets hitting the market, from smartphones to smartwatches.
+                    </p>
+                </div>
+
+                <div class="card_footer_container">
+
+                    <div class="author_container">
+                        <div class="author_avatar_container">
+                            <img 
+                                src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
+                                loading="lazy"
+                                class="author_avatar"
+                                alt="avatar 1"
+                            />
+                        </div>
+                        <div class="author_info_container">
+                            <span class="author_name">
+                                John Doe
+                            </span>
+                            <span class="author_date">
+                                Sept 19, 2021
+                            </span>
+                        </div>
+                    </div>
+
+                    <div >
+                        <span class="card_tag_container">Technology</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card_container">
+                <a href="#" class="card_image_container">
+                    <img
+                        src="https://picsum.photos/600/400?mindfulness"
+                        alt="card 1 image"
+                        class="card_image"
+                        loading="lazy"
+                    />
+                </a>
+
+                <div class="card_title_container">
+                    <a href="#" class="card_title_anchor">
+                        <h2 class="card_title">New Gadgets Released</h2>
+                    </a>
+                    <p class="card_desc">
+                        Check out the latest tech gadgets hitting the market, from smartphones to smartwatches.
+                    </p>
+                </div>
+
+                <div class="card_footer_container">
+
+                    <div class="author_container">
+                        <div class="author_avatar_container">
+                            <img 
+                                src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
+                                loading="lazy"
+                                class="author_avatar"
+                                alt="avatar 1"
+                            />
+                        </div>
+                        <div class="author_info_container">
+                            <span class="author_name">
+                                John Doe
+                            </span>
+                            <span class="author_date">
+                                Sept 19, 2021
+                            </span>
+                        </div>
+                    </div>
+
+                    <div >
+                        <span class="card_tag_container">Technology</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card_container">
+                <a href="#" class="card_image_container">
+                    <img
+                        src="https://picsum.photos/600/400?productivity"
+                        alt="card 1 image"
+                        class="card_image"
+                        loading="lazy"
+                    />
+                </a>
+
+                <div class="card_title_container">
+                    <a href="#" class="card_title_anchor">
+                        <h2 class="card_title">New Gadgets Released</h2>
+                    </a>
+                    <p class="card_desc">
+                        Check out the latest tech gadgets hitting the market, from smartphones to smartwatches.
+                    </p>
+                </div>
+
+                <div class="card_footer_container">
+
+                    <div class="author_container">
+                        <div class="author_avatar_container">
+                            <img 
+                                src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
+                                loading="lazy"
+                                class="author_avatar"
+                                alt="avatar 1"
+                            />
+                        </div>
+                        <div class="author_info_container">
+                            <span class="author_name">
+                                John Doe
+                            </span>
+                            <span class="author_date">
+                                Sept 19, 2021
+                            </span>
+                        </div>
+                    </div>
+
+                    <div >
+                        <span class="card_tag_container">Technology</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card_container">
+                <a href="#" class="card_image_container">
+                    <img
+                        src="https://picsum.photos/600/400?healthy"
+                        alt="card 1 image"
+                        class="card_image"
+                        loading="lazy"
+                    />
+                </a>
+
+                <div class="card_title_container">
+                    <a href="#" class="card_title_anchor">
+                        <h2 class="card_title">New Gadgets Released</h2>
+                    </a>
+                    <p class="card_desc">
+                        Check out the latest tech gadgets hitting the market, from smartphones to smartwatches.
+                    </p>
+                </div>
+
+                <div class="card_footer_container">
+
+                    <div class="author_container">
+                        <div class="author_avatar_container">
+                            <img 
+                                src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
+                                loading="lazy"
+                                class="author_avatar"
+                                alt="avatar 1"
+                            />
+                        </div>
+                        <div class="author_info_container">
+                            <span class="author_name">
+                                John Doe
+                            </span>
+                            <span class="author_date">
+                                Sept 19, 2021
+                            </span>
+                        </div>
+                    </div>
+
+                    <div >
+                        <span class="card_tag_container">Technology</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card_container">
+                <a href="#" class="card_image_container">
+                    <img
+                        src="https://picsum.photos/600/400?sustainability"
+                        alt="card 1 image"
+                        class="card_image"
+                        loading="lazy"
+                    />
+                </a>
+
+                <div class="card_title_container">
+                    <a href="#" class="card_title_anchor">
+                        <h2 class="card_title">New Gadgets Released</h2>
+                    </a>
+                    <p class="card_desc">
+                        Check out the latest tech gadgets hitting the market, from smartphones to smartwatches.
+                    </p>
+                </div>
+
+                <div class="card_footer_container">
+
+                    <div class="author_container">
+                        <div class="author_avatar_container">
+                            <img 
+                                src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
+                                loading="lazy"
+                                class="author_avatar"
+                                alt="avatar 1"
+                            />
+                        </div>
+                        <div class="author_info_container">
+                            <span class="author_name">
+                                John Doe
+                            </span>
+                            <span class="author_date">
+                                Sept 19, 2021
+                            </span>
+                        </div>
+                    </div>
+
+                    <div  >
+                        <span class="card_tag_container">Technology</span>
+                    </div>
+                </div>
+            </div>
         </main>
 
     </div>
@@ -78,4 +397,4 @@
 <!-- 
 
 https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64
-https://source.unsplash.com/random/600×400?healthy -->
+https://picsum.photos/600/400?healthy -->
