--- a/CODE HELP/CSS/lecture31_Responsive_Grid/index.html
+++ b/CODE HELP/CSS/lecture31_Responsive_Grid/index.html
@@ -45,6 +45,7 @@
         <div class="item">I</div>
         <div class="item">J</div>
         <div class="item">K</div>
+    </div>
 </body>
 </html>
 
