Grid template area

--- a/CODE HELP/CSS/lecture31_Responsive_Grid/index.html
+++ b/CODE HELP/CSS/lecture31_Responsive_Grid/index.html
@@ -54,5 +54,6 @@
  1) Grid autofit helps in auto filling of no of rows/colums according to size and needs.
  2) minmax - used to tell need of min & max size
  3) Used with grid-template-columns/rows : repeat(autofit, minmax(x,y))
- 4) Template - 
- 5)  -->
+ 4) grid-template-area : Used to convert a matrix into layout directly
+ 5) Give id to each item and form matrix(spanning element will have same id for different places in matrix)
+ 6) use grid-template-area to provide matrix -->
