--- a/CODE HELP/CSS/STUDYSYNC_project/index.html
+++ b/CODE HELP/CSS/STUDYSYNC_project/index.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>StudySync</title>
 </head>
 <body>
-    
+    <header>
+        <div class="header-content">
+            <a href="#logo" class="logo">
+                <img src="./images/StudySyn.svg" alt="logoImage" class="logo-icon">
+                <span class="logo-text">StudySync</span>
+            </a>
+            <nav class="nav">
+                <a href="#home" class="nav-link">Home</a>
+                <a href="#features" class="nav-link">Features</a>
+                <a href="#pricing" class="nav-link">Pricing</a>
+                <a href="#blog" class="nav-link">Blog</a>
+                <a href="#about" class="nav-link">About</a>
+            </nav>
+
+            <a href="#contact" class="contact-button">
+                Contact Us
+            </a>
+
+            <button type="button" class="menu-button">
+                <img src="./images/Hamburger.svg" alt="menuButton" class="menu-icon">
+            </button>
+        </div>
+    </header>
 </body>
 </html>
