--- a/CODE HELP/CSS/STUDYSYNC_project/index.html
+++ b/CODE HELP/CSS/STUDYSYNC_project/index.html
@@ -30,5 +30,54 @@
             </button>
         </div>
     </header>
+    <main>
+        <div class="content">
+            <div class="main-section">
+                <div class="content-left">
+                    <p class="section-label">Very proud to introduce</p>
+                    <h1 class="section-title">Seamless Learning for Brighter Futures</h1>
+                    <p class="section-description">
+                        Our innovative platform offers an effortless and seamless approach to learning, empowering students of all ages to achieve brighter futures. Join us on a transformative journey to simplify education and unlock your full potential.
+                    </p>
+                    <div class="button-group">
+                        <a href="#start" class="start-button">Start Now</a>
+                        <a href="#tour" class="tour-button">Take Tour</a>
+                    </div>
+                </div>
+                <div class="content-right">
+
+                    <div class="image-container">
+                        <img src="./images/usgs-hoS3dzgpHzw-unsplash.jpg" alt="sectionImage" class="section-image" />
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="company-container">
+            <h2 class="company-title">Trusted by the best</h2>
+            <div class="company-grid">
+
+                <div class="company-logo">
+                    <img  src="./images/Google.svg" class="svg-img"/>
+                    <span class="logo-txt">Google</span>
+                </div>
+
+                <div class="company-logo">
+                    <img  src="./images/Microsoft.svg" class="svg-img"/>
+                    <span class="logo-txt">Microsoft</span>
+                </div>
+
+                <div class="company-logo">
+                    <img  src="./images/linkedin.svg" class="svg-img"/>
+                    <span class="logo-txt">Linkedin</span>
+                </div>
+
+                <div class="company-logo">
+                    <img  src="./images/VectorEdu.svg" class="svg-img"/>
+                    <span class="logo-txt">VectorEdu</span>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
